--- a/app/core/css/style.css
+++ b/app/core/css/style.css
@@ -586,6 +586,11 @@ label span span {
 	padding: 0.5em 0;
 }
 
+#webapp-nav .psu-icon {
+	color: #fff;
+	text-shadow: none;
+}
+
 /* Head styles */
 #webapp-head{
 	background: #fff;
@@ -647,6 +652,10 @@ label span span {
 
 	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 	text-decoration: none;
+}
+
+.webapp-nav > .inner > ul > .link-with-icon > a {
+	padding-bottom: 8px;
 }
 
 .webapp-nav a{color: #eee;}
