--- a/app/core/css/psu-icons.less
+++ b/app/core/css/psu-icons.less
@@ -252,6 +252,7 @@
 .icon-feedback,
 .icon-info,
 .icon-map,
+.icon-events,
 .icon-movies,
 .icon-mymail,
 .icon-news,
@@ -275,6 +276,7 @@
 .icon-feedback:before { content: "F"; }
 .icon-info:before { content: "i"; }
 .icon-map:before { content: "M"; }
+.icon-events:before { content: "e"; }
 .icon-movies:before { content: "T"; }
 .icon-mymail:before { content: "E"; }
 .icon-news:before { content: "N"; }
