switching pink highlight to a light yellow

--- a/app/core/css/style.css
+++ b/app/core/css/style.css
@@ -40,7 +40,7 @@ a, span.link{color: #2885CA; text-decoration: none;}
 a:hover, span.link:hover{color: #11389B; text-decoration: none;}
 /* Accessible focus treatment: people.opera.com/patrickl/experiments/keyboard/test */
 a:hover, a:active, span.link:hover, span.link:active { outline: none; }
-a:link, span.link:link { -webkit-tap-highlight-color: #FF5E99; }
+a:link, span.link:link { -webkit-tap-highlight-color: #fcffaa; }
 a img{border: none;}
 
 abbr,acronym{border-bottom: 1px dotted #666;}
