--- a/webapp/calllog/css/default/default.css
+++ b/webapp/calllog/css/default/default.css
@@ -1,31 +1,9 @@
 @import url("checklists.css");
 /* Default */
-body{
-	background: #e1e0cd; 
-	font-family: arial, helvetica, sans-serif;
-	font-size:90%;
-	width: 960px;
-	margin: 0 auto;
-}
-h2{
-	color:#77825A;
-	font-size:1.4em;
-	font-weight:bold;
-	margin: 0 0 3px 0;
-	padding:3px;
-}
-hr{visibility:hidden;}
-input,textarea,select{
-	background: #fff;
-	border: 1px solid #000;
-	padding: 3px;
-}
-label{font-size: 0.9em;}
 
 .icon{vertical-align: middle;}
 /******************* Header **************************/
 #outer-header{
-	background: #F3F1E6;
 	border-bottom: 1px solid #BFBEA3;
 	height:75px;
 	position:relative;
@@ -66,20 +44,13 @@ label{font-size: 0.9em;}
 	border: none;
 }
 #main-open-calls{
-	background: #F3F1E6;
-	border:1px solid #BFBEA3;
-	font-size: 0.9em;
 	padding:3px;
 	position:relative;
 }
 #main-section{
-	border: none;
 	position:relative;
 }
 #main-helpdesk-news{
-	background: #F3F1E6;
-	border:1px solid #BFBEA3;
-	font-size: 0.9em;
 	position:relative;
 }
 
@@ -105,14 +76,6 @@ label{font-size: 0.9em;}
 	color:#2893D5;
 	text-decoration: none;
 }
-a:hover{
-	color:#11389B;
-}
-
-fieldset{
-	border:1px dotted #BFBEA3;
-}
-legend{color:#77825A;}
 
 #new-call-user-left-col{
 	background: none;
@@ -148,7 +111,6 @@ legend{color:#77825A;}
 .content-info,
 .main-table-properties,
 .block{
-	background: #F3F1E6;
 	border:1px solid #BFBEA3;
 	margin-bottom: 5px;
 }
@@ -166,31 +128,20 @@ legend{color:#77825A;}
 	background:none;
 }
 
-table{
-	background: none;
-	border-collapse: collapse;
-}
-
-tr{background-color: transparent;border: none;}
-td, #submit_reset{
-	background-color: #F3F1E6;
+#submit_reset{
 	border: 1px solid #BFBEA3;
 }
-.call-age-status-old{
-	background-color: #f3cccc;
+td.call-age-status-old{
+	background-color: #f3cccc !important;
 	border-color: #bfa3a3;
 }
-.activity-age-status-old{
-	background-color: #f3cccc;
+td.activity-age-status-old{
+	background-color: #f3cccc !important;
 	border-color: #bfa3a3;
 }
 
-th, .content-info-top, .content_highlight{
-	background:#77825A;
+.content-info-top, .content_highlight{
 	border: 1px solid #4a5236;
-}
-th a,th a:hover{
-	color: #F3F1E6;
 }
 #re-order-div{color:#85360F;}
 
