Fix bad field name
Introduced in 9faaadae29e5b1053fb717c9d398b0f94f08c6d5

--- a/app/core/css/style.css
+++ b/app/core/css/style.css
@@ -2183,7 +2183,7 @@ blockquote small {
 }
 
 /* force lazy fields to have content (and height) */
-.psuperson-lazy-field:after {
+.lazy-field:after {
 	content: "\0000a0";
 }
 
