--- a/webapp/calllog/templates/style.css
+++ b/webapp/calllog/templates/style.css
@@ -1,11 +1,11 @@
-.priority-status {text-align:center;}
-.status-high{background: #cd0000 !important;}
+.priority-status {text-align:center; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);}
+.status-high{background: #cd0000 !important; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);}
 .status-medium{background: #ffff7e !important;}
 .status-pending{background: #5da3ff !important;}
 .status-delayed{background: #c0c0c0;}
-.status-inprogress{background: #bd78c2 !important;}
+.status-inprogress{background: #bd78c2 !important; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);}
 .status-install{background: #69CF58 !important;}
-.status-upgrade{background: #e88523 !important;}
+.status-upgrade{background: #e88523 !important; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);}
 .status-collision{background: #208ec1 !important;}
 .status-purchase{background: #a2c1a9 !important;}
 .status-,.status-normal{background: #eeffee !important;}
@@ -85,7 +85,7 @@ tr:hover .fade{
 }
 
 .call-information select {
-	width: 170px;
+	width: 220px;
 }
 
 .call-information-building{
@@ -98,6 +98,20 @@ tr:hover .fade{
 
 .call-history {
 	overflow: auto;
+}
+
+.history .update {
+	border-bottom: 1px solid #ccc;
+}
+
+.history .update .priority-status {
+	display: inline-block;
+	float: none;
+	padding: 0.3em;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0.3em;
+	-moz-border-radius: 0.3em;
+	-webkit-border-radius: 0.3em;
 }
 
 .content-info{
