--- a/webapp/calllog/templates/style.css
+++ b/webapp/calllog/templates/style.css
@@ -1,4 +1,8 @@
-.priority-status {text-align:center; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);}
+.priority-status {
+	overflow: hidden;
+	text-align:center; 
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.25);
+}
 .status-high{background: #cd0000 !important; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);}
 .status-medium{background: #ffff7e !important;}
 .status-pending{background: #5da3ff !important;}
@@ -29,11 +33,11 @@ input[type=search] {
 
 a img{border: none;}
 
-.fade {
+.muted {
 	color: rgba(0, 0, 0, 0.3);
 }
 
-tr:hover .fade{
+tr:hover .muted{
 	color: rgba(0, 0, 0, 0.7);
 }
 
@@ -83,6 +87,25 @@ tr:hover .fade{
 	color: #666;
 	font-size: 0.9em;
 	font-style: italic;
+	overflow: hidden;
+	max-width: 430px;
+}
+
+.call-id {
+	font-size: 0.9em;
+}
+
+.assignees li {
+	text-align: center;
+	margin-left: 0;
+}
+
+.assignees .group {
+	opacity: 0.7;
+}
+
+.assigned-to_me .assignees .me {
+	color: #9B6161;
 }
 
 .call-information{
@@ -597,7 +620,7 @@ div#user_status_div .message{
 
 div#user_status_div .message strong{color:#709C72;}
 
-div#user_status_div .fade{color:#666;}
+div#user_status_div .muted{color:#666;}
 
 .print-funds{
 	margin-bottom: 5px;
@@ -782,13 +805,19 @@ div#user_status_div .fade{color:#666;}
 #submit_reset{
 	border: 1px solid #BFBEA3;
 }
-td.call-age-status-old{
-	background-color: #f3cccc !important;
-	border-color: #bfa3a3;
+
+td.call-age-status {
+	color: #ccc;
+	font-size: 2.5em;
+	text-align: center;
 }
+
 td.activity-age-status-old{
-	background-color: #f3cccc !important;
-	border-color: #bfa3a3;
+	color: red;
+}
+
+.summary .activity-age-status-old{
+	color: #9b6161;
 }
 
 .content-info-top, .content_highlight{
