Resolves #169. Adjust default bootstrap styles
Override some default styling so the mutli-column box displays form
elements and `<h2>` tags in a cleaner fashion.

--- a/webapp/ape/templates/style.css
+++ b/webapp/ape/templates/style.css
@@ -373,7 +373,12 @@ table.tablesorter tbody td{
 }
 
 .datacolumn h2{
+	font-size: 1.3em;
 	color: #999;
+}
+
+.datacolumn select {
+	width: auto;
 }
 
 .datacolumn li.clickable h2{
