Resolves #171. APE Style Cleanup
- Properly boxed all pages
- Switched the old tooltip functionality over to twitter
	popover/tooltips
- Fixed the highlighting of role bug. The bug was: when mousing over
	APE roles, the rows failed to highlight the auto-assigned hierarchies.

--- a/app/core/css/style.css
+++ b/app/core/css/style.css
@@ -1087,6 +1087,13 @@ label span span {
 	font-size: 1px;
 }
 
+.box .grid-internal {
+	margin-left: 0;
+	margin-right: 0;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
 /* border-box style */
 .border-box > .title,
 .border-box > .subheader,
