--- a/webapp/psu-mobile/templates/style.scss
+++ b/webapp/psu-mobile/templates/style.scss
@@ -344,6 +344,11 @@ footer.ui-footer {
 		top: 0px;
 		box-shadow: none;
 	}
+
+	#logout-btn {
+		width: 50%;
+		margin: 25px auto;
+	}
 }
 
 /* Newsfeed */
