--- a/webapp/psu-mobile/templates/style.css
+++ b/webapp/psu-mobile/templates/style.css
@@ -55,6 +55,9 @@ h3 {
 a, a:link {
   text-decoration: none; }
 
+.hidden {
+  display: none; }
+
 /* Header */
 header.ui-header {
   overflow: hidden;
