Created a simple logout page so that PhoneGap users don't see a quick blink from the ChildBrowser. Also fixed my routing.... I was using underscore's instead of hyphens. (facepalm)

--- a/webapp/psu-mobile/templates/style.css
+++ b/webapp/psu-mobile/templates/style.css
@@ -433,6 +433,10 @@ footer.ui-footer {
   margin-top: 1px;
   margin-bottom: 0px; }
 
+/* Logout Message */
+#page-logout-message {
+  text-align: center; }
+
 /* Styles based on the device's OS */
 html.android header .ui-btn[data-rel=back] {
   display: none; }
