--- a/webapp/psu-mobile/templates/style.scss
+++ b/webapp/psu-mobile/templates/style.scss
@@ -613,6 +613,11 @@ footer.ui-footer {
 	}
 }
 
+/* Logout Message */
+#page-logout-message {
+	text-align: center;
+}
+
 
 /* Styles based on the device's OS */
 html.android header {
