--- a/webapp/psu-mobile/templates/style.scss
+++ b/webapp/psu-mobile/templates/style.scss
@@ -618,6 +618,11 @@ footer.ui-footer {
 	text-align: center;
 }
 
+/* Logout Success */
+#page-logout-success {
+	text-align: center;
+}
+
 
 /* Styles based on the device's OS */
 html.android header {
