make grid-internal only 3px for stupid ie7

--- a/app/core/css/style.css
+++ b/app/core/css/style.css
@@ -1090,6 +1090,11 @@ label span span {
 .box .grid-internal {
 	margin-left: 0;
 	margin-right: 0;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.ie7 .box .grid-internal {
 	padding-left: 3px;
 	padding-right: 3px;
 }
