--- a/app/core/css/psu-icons.less
+++ b/app/core/css/psu-icons.less
@@ -260,6 +260,7 @@
 .icon-parking,
 .icon-phonebook,
 .icon-quota,
+.icon-schedule,
 .icon-secure,
 .icon-twitter-item {
 	font-family: 'PSUIcons01';
@@ -284,6 +285,7 @@
 .icon-parking:before { content: "P"; }
 .icon-phonebook:before { content: "A"; }
 .icon-quota:before { content: "Q"; }
+.icon-schedule:before { content: "c"; }
 .icon-secure:before { content: "!"; }
 .icon-twitter-item:before { content: "1"; }
 
