Fixes #204, delayed color not always correct

--- a/webapp/calllog/templates/style.css
+++ b/webapp/calllog/templates/style.css
@@ -6,7 +6,7 @@
 .status-high{background: #cd0000 !important; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);}
 .status-medium{background: #ffff7e !important;}
 .status-pending{background: #5da3ff !important;}
-.status-delayed{background: #c0c0c0;}
+.status-delayed{background: #c0c0c0 !important;}
 .status-inprogress{background: #bd78c2 !important; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);}
 .status-install{background: #69CF58 !important;}
 .status-upgrade{background: #e88523 !important; color: #fff; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);}
