--- a/webapp/calllog/templates/style.css
+++ b/webapp/calllog/templates/style.css
@@ -862,3 +862,85 @@ a.action:link, a.action:visited, a.action:active, input.action {
 .inline{
 	display:inline;
 }
+
+.business-area {
+	float: left;
+	width: 180px;
+	padding: 5px;
+}
+
+.business-area section {
+	height: 700px;
+	padding: 0.5em;
+
+	-moz-border-radius: 1em;
+	-webkit-border-radius: 1em;
+	border-radius: 1em;
+}
+
+.business-area h2 {
+	color: #fff;
+	font-size: 1.5em;
+	line-height: 1.5em;
+	text-align: center;
+	height: 90px;
+
+	text-shadow: 0 1px 0px rgba(0, 0, 0, 0.3);
+}
+
+.business-area h3 {
+	color: #fff;
+	font-size: 1em;
+
+	text-shadow: 0 1px 0px rgba(0, 0, 0, 0.3);
+}
+
+.business-area section > ul li {
+	margin: 0;
+	padding: 0;
+}
+
+.business-area section > ul li li {
+	color: #eee;
+	font-size: 0.9em;
+	font-weight: bold;
+	list-style-type: disc;
+	margin-left: 1.5em;
+	text-shadow: 0 1px 0px rgba(0, 0, 0, 0.1);
+}
+
+.business-area section > ul li li:hover {
+	color: #fff;
+}
+
+.business-area section > ul > li {
+	background: rgba( 255, 255, 255, 0.15 );
+	border: 1px solid rgba( 0, 0, 0, 0.3 );
+	margin-bottom: 0.5em;
+	min-height: 100px;
+	padding: 0.5em;
+
+	-moz-border-radius: 0.5em;
+	-webkit-border-radius: 0.5em;
+	border-radius: 0.5em;
+}
+
+#business-area-cs {
+	background: #6c5445;
+}
+
+#business-area-is {
+	background: #bb8d5c;
+}
+
+#business-area-bs {
+	background: #617e55;
+}
+
+#business-area-mis {
+	background: #407ba9;
+}
+
+#business-area-ts {
+	background: #805d78;
+}
